# lclstream

./: LICENSE  README.md  gunicorn_config.py  pyproject.toml  run.sh  setup.py  test.sh
docs/: benchmarking.md
examples/: adapt.mae_pretrain.py  client.msgpack+ray.py  h5viewer.py  implement.maxie.psana_loader.mpi.py  implement.maxie.psana_loader.ray.py  scr.mae.input.ipynb  server.msgpack+ray.py  submit.maxie.ray.sbatch
examples/dataloading/: client.msgpack+ray.py  client.pytorch.h5.py  client.pytorch.py  server.debug.py  server.py  server_async.py
examples/fsdp/: scr.fms.fsdp.checkpointing.py  scr.fms.fsdp.model_sharding.py
lclstream/: client.pytorch.h5.py  models.py  mpi_psana.py  nng.py  psana_img_src.py  psana_pull.py  psana_pull_listen.py  psana_push.py  psana_stub.py  server.py  transfer.py
lclstream/datasets/: utils.py
maxie/datasets/: psana_dataset.py  psana_utils.py  remote_psana_dataset.py  utils.py
scripts/: psana_push.py
tests/: test_mpi_psana.py  test_psana_img_src.py  test_server.py
