[tool.poetry]
name = "lclstream"
version = "0.5.0"
description = "Image streaming application for psana."
authors = ["Cong Wang <wangimagine@gmail.com>", "David M. Rogers <predictivestatmech@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.1"
pynng = "^0.8.0"
zfpy = "^1.0.0" # had to manually install with cmake process...
numpy = "^2.0"
actor-api = {git = "https://code.ornl.gov/99r/actor_api"}

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
