[tool.poetry]
name = "lclstream"
version = "0.6.0"
description = "Image streaming application for psana."
authors = ["Cong Wang <wangimagine@gmail.com>", "David M. Rogers <predictivestatmech@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.103.2"
pydantic = ">=2.1"
uvicorn = ">=0.17"
pynng = "^0.8.0"
zfpy = "^1.0.0"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
