[tool.poetry]
name = "lclstream"
version = "0.7.0"
description = "Image streaming application for psana."
authors = ["Cong Wang <wangimagine@gmail.com>",
           "David M. Rogers <predictivestatmech@gmail.com>",
           "Valerio Mariani <valmar@slac.stanford.edu>"
          ]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
psana_push = "lclstream.psana_push:run"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.103.2"
pydantic = ">=2.1"
uvicorn = ">=0.17"
pynng = "^0.8.0"
numpy = ">=1.20.0,<2.0"
typer = "^0.12.3"
h5py = "^3.11.0"
hdf5plugin = "^4.4.0"
#pyzfp = "*"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
